--- a/components/button/styles.scss
+++ b/components/button/styles.scss
@@ -1,5 +1,23 @@
 .Button {
+  font-size: 15px;
+  color: #00653e;
+  font-weight: bold;
   background: transparent;
   border: none;
-  background: red;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #00653e;
+  border-radius: 48px;
+  padding: 7px 19px;
+  margin-right: 16px;
+}
+
+.Button:hover:not(:disabled) {
+  background-color: #e3f0eb;
+  cursor: pointer;
+}
+
+.Button:disabled {
+  cursor: not-allowed;
+  opacity: 0.5;
 }
