--- a/components/button/styles.scss
+++ b/components/button/styles.scss
@@ -1,23 +1,36 @@
+@import "../common/theme.scss";
+
 .Button {
+  // font-family: 'Montserrat', sans-serif;
   font-size: 15px;
-  color: #00653e;
+  color: $colorGreenDarkApron;
   font-weight: bold;
   background: transparent;
   border: none;
   border-style: solid;
   border-width: 1px;
-  border-color: #00653e;
+  border-color: $colorGreenDarkApron;
   border-radius: 48px;
   padding: 7px 19px;
   margin-right: 16px;
 }
 
 .Button:hover:not(:disabled) {
-  background-color: #e3f0eb;
+  background-color: rgba( $colorGreenApron, .1 );
   cursor: pointer;
 }
 
 .Button:disabled {
   cursor: not-allowed;
   opacity: 0.5;
+}
+
+.positive {
+  background-color: $colorGreenDarkApron;
+  border: none;
+  color: $colorTextWhite;
+}
+
+.textOnly {
+  border-color: transparent;
 }
