--- a/components/field/styles.scss
+++ b/components/field/styles.scss
@@ -47,6 +47,25 @@
     padding-right: 5px;
   }
 
+  .errorCrossIconSvg {
+    animation: .2s ease-out field-status-icon-fade-in forwards;
+  }
+
+  .redInputBorder {
+    border: none;
+    border-bottom: 1px solid $colorRed;
+  }
+
+  .defaultInputBorder:focus {
+    border-bottom: 1px solid $colorGreenStarbucks;
+    transition: 0.25s;
+  }
+
+  .defaultInputBorder {
+    border: none;
+    border-bottom: 1px solid $colorCeramic;
+  }
+
   .fieldStatusContainer {
     padding-left: 5px;
     display: flex;
@@ -55,8 +74,13 @@
     font-size: 14px;
     height: 15px;
     margin-bottom: 5px;
+    transition: color .2s ease-out
   }
   
+  @keyframes field-status-icon-fade-in {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
   // .input:focus ~ .floatingLabelFocus,
   // .input:not(:focus):valid ~ .floatingLabelFocus {
   //   opacity: 1;
@@ -70,13 +94,6 @@
     width: 100%;
     height: 30px;
     outline: none;
-    border: none;
-    border-bottom: 1px solid $colorCeramic;
-  }
-
-  .inputText:focus {
-    border-bottom: 1px solid $colorGreenStarbucks;
-    transition: 0.25s;
   }
   
   .container {
