feat(float): Add prototype float

--- a/components/float/styles.scss
+++ b/components/float/styles.scss
@@ -1,1 +1,29 @@
-.container {}
+@import "@coffee-shope/theme/colors.scss";
+
+.float {
+  position: relative;
+  display: inline-block;
+  z-index: 1;
+  padding: 18px 24px;
+  background: $colorGreenApron;
+  box-shadow: 0 0 6px rgba(0,0,0,.24), 0 8px 12px rgba(0,0,0,.14);
+  border-radius: 500px;
+  color: #fff;
+  font-size: 19px;
+  font-size: 19px;
+  font-weight: 700;
+  line-height: 1.2;
+  overflow: hidden;
+  text-align: center;
+  text-decoration: none;
+  transition-duration: .2s;
+  transition-property: transform,box-shadow,width,height;
+  transition-timing-function: ease;
+  cursor: pointer;
+  width: 200px;
+}
+
+.disabled {
+  background: #ccc;
+  cursor: not-allowed;
+}
