--- a/components/field/styles.scss
+++ b/components/field/styles.scss
@@ -85,8 +85,8 @@
     animation-timing-function: ease;  }
   
   @keyframes drop-in-status {
-    0% { margin-top: -10px; opacity: 0; }
-    100% { margin-top: 0px; opacity: 1; }
+    0% { transform: translateY(-8px); opacity: 0; }
+    100% { transform: translateY(0px); opacity: 1; }
   }
   
   @keyframes field-status-icon-fade-in {
