feat(button): increase font size on large button

--- a/components/button/styles.scss
+++ b/components/button/styles.scss
@@ -43,6 +43,7 @@
   background-color: $colorGreenDarkApron;
   border-color: $colorGreenDarkApron;
   color: #fff;
+  font-size: 14px;
   border-color: rgba(0,168,98,.9);
 }
 
