--- a/components/button/src/styles.scss
+++ b/components/button/src/styles.scss
@@ -1,4 +1,4 @@
-@import "@coffee-shope/theme/theme.scss";
+@import "~@coffee-shope/theme/theme.scss";
 
 .Button {
   font-family: 'Montserrat', sans-serif;
